style.css
/*
 Theme Name:        Anor Londo
 Theme URI:         https://marc.tv/weniger-code-ist-mehr/
 GitHub Theme URI:  mtoensing/anor-londo-seventeen
 Description:       Based on Twenty Seventeen Theme
 Author:            MarcDK
 Author URI:        http://marc.tv
 Template:          twentyseventeen
 Version:           6.9.9
 License:           GNU General Public License v2 or later
 License URI:       http://www.gnu.org/licenses/gpl-2.0.html
 Tags:              light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready, breadcrumbs
 Text Domain:       twenty-seventeen-child
*/

/* */

/* 5.0 Typography */

cite:before {
    content: " — ";
}

cite {
    font-size: 70%;
}

blockquote {
    padding-bottom: 0.5em;
    padding-left: 30px;
    padding-top: 0;
    position: relative;
    margin: 0 0 1.5em;
}

blockquote:after {
    position: absolute;
    top: -17px;
    left: 0px;
    content: "“";
    font-family: serif;
    font-size: 46px;
}

blockquote p {
    font-style: italic;
    margin: 0;
}

ul.nobullets,
ol.nobullets {
    margin-left: 0;
    list-style: none;
}

@media screen and (min-width: 48em) {

    html .site-content {
        padding: 3.5em 0 0;
    }

    body,
    button,
    input,
    select,
    textarea {
        font-size: 18px;
        font-size: 1.1rem;
    }

    .post blockquote p {
        font-size: 22px;
        font-size: 1.4rem;
    }

    .single-post .entry-title,
    html body.page .entry-title {
        font-size: 48px;
        font-size: 3rem;
        font-weight: 300;
    }

}

@media screen and (min-width: 30em) {
    /* Typography */
    body, button, input, select, textarea {
        font-size: 20px;
        font-size: 1.25rem;
    }
}

.post ol li {
    margin-bottom: 1em;
}

/* 14.0 Comments */

html .comment-list .comment-reply-link,
#cancel-comment-reply-link {
    border: none;
    background-color: #ddd;
    padding: 0.4em 1em;
    box-shadow: none;
    -webkit-box-shadow: none;
    -webkit-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.3s ease-in-out;
    transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.3s ease-in-out;
}

html .comment-list .comment-reply-link:hover,
html .comment-list .comment-reply-link:active,
#cancel-comment-reply-link:hover,
#cancel-comment-reply-link:active {
    background-color: #767676;
    color: #fff;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.comment-content blockquote {
    font-size: 14px;
    font-size: 0.875rem;
    background: #eee;
}

.comment-content a:focus, .comment-content a:hover {
    color: #000;
    -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
}

.comment-content a {
    -webkit-box-shadow: inset 0 -1px 0 rgba(15, 15, 15, 1);
    box-shadow: inset 0 -1px 0 rgba(15, 15, 15, 1);
    -webkit-transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
    transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
    transition: color 80ms ease-in, box-shadow 130ms ease-in-out;
    transition: color 80ms ease-in, box-shadow 130ms ease-in-out, -webkit-box-shadow 130ms ease-in-out;
}

/* 20.0 hacks */

.comment-metadata time {
    display: none;
}

.entry-meta a,
.posted-on,
.entry-meta,
.comment-notes,
.logged-in-as,
.comment-notes a,
.logged-in-as a {
    color: #b9b9b9;
}

.entry-meta a:hover,
.comment-notes a:hover,
.logged-in-as a:hover {
    underline: 1px solid #000;
    color: #333;
}

.logged-in .logged-in-hidden {
    display: none;
}

.logged-in .comment-metadata time {
    display: inline;
}

.comment-metadata a.comment-edit-link {
    margin-left: 0em;
}

.colors-dark button.pswp__button {
    background-color: transparent;
}

/* 21.0 Plugins */

.js .marctv-moderate-links {
    width: 200px;
    float: right;
    text-align: right;
    margin-top: 2px;
}

.cld-like-wrap a.cld-like-dislike-trigger:hover,
.cld-dislike-wrap a.cld-like-dislike-trigger:hover {
    color: #37609D;
}

.cld-like-wrap a.cld-like-dislike-trigger,
.cld-dislike-wrap a.cld-like-dislike-trigger {
    color: #333;
    outline: none;
}

.single-game .cld-like-wrap a.cld-like-dislike-trigger:hover,
.single-game .cld-dislike-wrap a.cld-like-dislike-trigger:hover {
    color: #333;
}

.single-game .cld-like-wrap a.cld-like-dislike-trigger,
.single-game .cld-dislike-wrap a.cld-like-dislike-trigger {

    color: #0F8C4D;
}

html span.on {
    font-style: italic;
}

.comment-subscription-form {
    font-size: 80%;
}

.gtc-list li {
    padding-bottom: 0.5em;
}

.gtc-list a.gtc-link {
    box-shadow: none;
}

/* 22.0 widgets */

/* 22.1 social button */

.textwidget .socialbutton:first-child {
    margin-bottom: 1.5em;
}

.socialbutton {
    display: block;
    background: #3B5998;
    /* Facebook color */
    text-align: center;
    padding: 1em;
    color: #fff;
    text-decoration: none;
    border: none;
    box-shadow: none !important;
    position: relative;
    overflow: hidden;
}

.socialbutton .dashicons {
    margin-right: 5px;
}

.socialbutton:hover,
.socialbutton:active,
.socialbutton:focus {
    color: #fff !important;
    text-decoration: underline;
}

.socialbutton:hover::before {
    transform: rotate(336deg);
    font-size: 68px;
}

.socialbutton:hover::before,
.socialbutton.twitter:hover::before {
    color: #fff;
    text-decoration: none;
}

.socialbutton:hover span {
    text-decoration: none;
}

.socialbutton.twitter {
    background: #1DA1F2;
    /* Twitter color */
}

.socialbutton.twitter::before {
    content: "\f301";
    color: #0d85d2;
}
/* ... */

